--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -17,23 +17,6 @@ spring:
       max-request-size: 100MB
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://121.78.158.27:5432/vaiv_duplanet
+    url: jdbc:postgresql://192.168.1.253:5432/tft
     username: postgres
-    ##빌드,배포 시엔 퍼블릭 아이피 XXX localhost로 바꿔주세요!!!
-    password: egis0700
-    ##egis 개발 테스트
-  thymeleaf:
-    cache: false
-    check-template-location: true
-    prefix: classpath:/templates/
-    suffix: .html
-  web:
-    resources:
-      static-locations: classpath:/static/
-      add-mappings: true
-  #2.6이상 spring boot에서 swagger3.0 이상 스웨거 사용 시 에러 해결
-  mvc:
-    throw-exception-if-no-handler-found: true #exception 404
-    static-path-pattern: /static/**
-    pathmatch:
-      matching-strategy: ant-path-matcher
+    password: postgres
